# rio-tiler-mvt

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
rio_tiler_mvt/: __init__.py  mvt.pyx
tests/: test_mvt.py
tests/fixtures/: cog_classes.tif  test.tif
