[bumpversion]
current_version = 0.1.0
commit = True
tag = True
tag_name = {new_version}
parse = 
	(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
	((?P<pre>a|b|rc|dev)(?P<prenum>\d+))?
serialize = 
	{major}.{minor}.{patch}{pre}{prenum}
	{major}.{minor}.{patch}

[bumpversion:file:rio_tiler_mvt/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
version = attr: rio_tiler_mvt.__version__

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-line-length = 90

[mypy]
no_strict_optional = True
ignore_missing_imports = True

[tool:isort]
profile = black
known_first_party = rio_tiler_mvt
known_third_party = rasterio,vtzero,shapely
default_section = THIRDPARTY
