[bumpversion]
current_version = 0.2.0
commit = True
tag = True
tag_name = {new_version}
parse =
	(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
	((?P<pre>a|b|rc|dev)(?P<prenum>\d+))?
serialize =
	{major}.{minor}.{patch}{pre}{prenum}
	{major}.{minor}.{patch}

[bumpversion:file:rio_tiler_mvt/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
version = attr: rio_tiler_mvt.__version__

[mypy]
no_strict_optional = True
ignore_missing_imports = True

[tool:isort]
profile = black
known_first_party = rio_tiler_mvt
known_third_party = rasterio,vtzero,shapely
default_section = THIRDPARTY

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
    "B028",
]

[tool.ruff.lint.mccabe]
max-complexity = 12
