[bumpversion]
current_version = 0.2.0
commit = True
tag = True
tag_name = {new_version}
parse =
	(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
	((?P<pre>a|b|rc|dev)(?P<prenum>\d+))?
serialize =
	{major}.{minor}.{patch}{pre}{prenum}
	{major}.{minor}.{patch}

[bumpversion:file:rio_tiler_mvt/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
version = attr: rio_tiler_mvt.__version__
